# chat-what-car-to-buy

./: .gitignore  README.MD  pyproject.toml  requirements.txt
config/: config.py
data/queries/: search_queries.txt  subreddits.txt
data/raw/: schemas.json  subreddits.txt
notebooks/: analysis.ipynb  pipeline_prototype.ipynb
src/chatwhatcartobuy/: app.py  cli_app_intro.txt
src/chatwhatcartobuy/config/: .env.template  llm_api_config.py  logging_config.py  parquet_config.py
src/chatwhatcartobuy/llm/: chatbot.py  system_prompt.txt
src/chatwhatcartobuy/pipeline/: etl.py  loader.py  streamer.py  transformer.py  wrangling.py
src/chatwhatcartobuy/rag/: build_retriever.py  documents.py  embeddings.py  prep.py  retriever.py  vector_db.py
src/chatwhatcartobuy/utils/: getpath.py  loadenv.py  ratelimiter.py  txtparser.py  wrangling.py
src/usedcaranalytics/config/: .env.template  logging_config.py  parquet.py  parquet_config.py
src/usedcaranalytics/features/: prepare_data.py  wrangling.py
tests/: conftest.py  sample-comments.parquet  test_config_api.py  test_config_parquet.py  test_pipeline_etl.py  test_pipeline_loader.py  test_pipeline_main.py  test_pipeline_streamer.py  test_pipeline_transformer.py  test_pipeline_wrangling.py  test_utils_getpath.py  test_utils_ratelimiter.py  test_utils_txtparser.py  test_utils_wrangling.py  test_wrangling.py
tests/config/: test_config_api.py
tests/pipeline/: test_pipeline_streamer.py
tests/test-data/: sample-submissions.parquet
tests/utils/: test_utils_getpath.py  test_utils_wrangling.py
(+16 files in other folders)
