[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatwhatcartobuy"
version = "0.1.0"
description = "RAG-powered AI Chatbot to assist users in buying used cars."
authors = [
    { name = "Richard Canlas" }
]
dependencies = [
    "python-dotenv",
    "pyarrow",
    "pandas",
    "praw",
    "prawcore",
    "numpy",          
    "tqdm",           
    "requests"        
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/chardc/UsedCarAnalytics"
LinkedIn = "https://www.linkedin.com/in/richard-canlas-cpa-99a94b153/"